# sigma

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  sigma.config.yml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.tours/: sigma-codebase.tour
cli/: __init__.py  axis_economy.py  board.py  caveman.py  checks.py  claude_local.py  claude_md_check.py  claude_md_check_run.py  claude_md_ref.py  claude_md_scaffold.py  claude_md_scaffold_run.py  codetour.py  codex_login.py  config.py  cost.py  docs_check.py  docs_check_run.py  doctor.py  domains_index.py  eval.py  eval_run.py  events.py  gate.py  graph_impact.py  graphify.py  hermes.py  intent.py  keepawake.py  learn.py  lessons.py  loop.py  main.py  models.py  onboard.py  paths.py  pipeline.py  profile_manifest.py  profile_run.py  prune.py  prune_run.py  (+27 more)
commands/: blueprint.md  board.md  claude-md-check.md  claude-md-create.md  craft.md  e2e.md  eval.md  grill-loop.md  grill.md  hermes.md  implement-task.md  learn.md  loop.md  profile.md  propose.md  prune.md  research.md  review.md  scout.md  sigma-learn-lesson.md  spec.md  tasks.md  verify.md  weave.md
docs/: PLAYGROUND.md
installer/: setup.sh
scripts/: regen_research_docs.py
skills/: README.md
tests/: conftest.py  test_axis_economy.py  test_board.py  test_caveman.py  test_checks.py  test_claude_local.py  test_claude_md_check.py  test_claude_md_check_run.py  test_claude_md_ref.py  test_claude_md_scaffold.py  test_claude_md_scaffold_run.py  test_cli.py  test_codetour.py  test_codex_login.py  test_config.py  (+53 more)
(+113 files in other folders)
